<resources>
    <string name="app_name">CityBee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bottom_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cars">Cars</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_activity_admin">Administavimas</string>
    <string name="tab_text_1">Vartotojai</string>
    <string name="tab_text_2">Automobiliai</string>
    <string name="ban">Užblokuoti</string>
    <string name="edit">Redaguoti</string>
    <string name="create_user">Kurti vartotoją</string>
    <string name="edit_user">Redaguoti vartotoją</string>
    <string name="username">Vartotojo vardas</string>
    <string name="password">Vartotojo slaptažodis</string>
    <string name="email">Vartotojo el. pašto adresas</string>
    <string name="submit">Patvirtinti</string>
    <string name="title_activity_auth">Autentifikacija</string>
    <string name="prompt_email">El. paštas</string>
    <string name="prompt_password">Slaptažodis</string>
    <string name="action_sign_in">Prisijungti</string>
    <string name="action_sign_in_short">Prisijungti</string>
    <string name="invalid_username">Blogas vartotojo vardas</string>
    <string name="invalid_password">Slaptažodį turi sudaryti bent 5 simboliai</string>
    <string name="login_failed">"Prisijungti nepavyko"</string>
    <string name="action_register">Registracija</string>
    <string name="invalid_name">Vartotojo vardas negali būti tuščias</string>
    <string name="money">Pinigai</string>
    <string name="logout">Atsijungti</string>
    <string name="title_history">History</string>
</resources>