<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_cars"
        android:icon="@drawable/ic_baseline_directions_car_24"
        android:title="@string/title_cars" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_baseline_account_balance_wallet_24"
        android:title="@string/title_wallet" />

</menu>