<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mainactivity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mainactivity.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.mainactivity.ui.trips_history.TripsHistoryFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_trips_history" />
    <fragment
        android:id="@+id/navigation_cars"
        android:name="com.example.mainactivity.ui.cars.NavigationCarsFragment"
        android:label="@string/title_cars"
        tools:layout="@layout/fragment_navigation_cars" />
    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.mainactivity.ui.wallet.WalletFragment"
        android:label="@string/title_wallet"
        tools:layout="@layout/fragment_wallet" />
</navigation>